[package]
name = "ac-6"
version = "0.1.0"
authors = ["Chris Rose <offline@offby1.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["part1"]
part1 = []
part2 = []

[dependencies]
clap = "2.33"
itertools = "0.9.0"
